force-app/main/default/objects/HelloSign__HelloSign_Signature_Request_Detail__c/HelloSign__HelloSign_Signature_Request_Detail__c.object-meta.xml
<CustomObject>
    <label>Dropbox Sign Signature Request Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Dropbox Sign Signature Request Detail Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dropbox Sign Signature Request Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>