force-app/main/default/objects/HelloSign__HelloSign_Signature_Request_Detail__c/fields/HelloSign__Date__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Date__c</fullName>
    <description>Datetime field on the signature request detail record. Stores when the callback happens as part of the audit trail</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>