force-app/main/default/objects/HelloSign__HelloSign_Signature_Request_Detail__c/fields/HelloSign__Event__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Event__c</fullName>
    <description>Dropdown option on the signature request detail record. Values:
Sent: Created when the agreement has been sent a specific signer.
Condition: Ordered Signers → in the case of N total signers in an order, when signer(N-1) has &quot;signed&quot; then immeditaly &quot;sent&quot; would occur for signer (N)
Condition: Non-ordered signers → in the case of N total signers, in no order, upon sending the request each N signer should be documented as &quot;Sent&quot;

Viewed: Created when the agreement has been opened by a particular signer.

Signed: Created when the agreement has been signed by a specific signer

Declined: Created when the agreement has been successfully declined by signer including adding in a comment</description>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reminded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>