force-app/main/default/objects/HelloSign__HelloSign_Signature_Request_Detail__c/fields/HelloSign__Event_ID__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Event_ID__c</fullName>
    <description>String field on the signature request detail record</description>
    <displayFormat>HELLO-{000000}</displayFormat>
    <label>Event ID</label>
    <type>AutoNumber</type>
</CustomField>