force-app/main/default/objects/HelloSign__HelloSign_Signature_Request_Detail__c/fields/HelloSign__HelloSign_Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__HelloSign_Signature_Request__c</fullName>
    <description>String field on the signature request detail record. Stores the Id of the parent record.</description>
    <label>Dropbox Sign Signature Request</label>
    <referenceTo>HelloSign__HelloSign_Signature_Request__c</referenceTo>
    <relationshipLabel>Dropbox Sign Signature Request Details</relationshipLabel>
    <relationshipName>HelloSign_Document_Status_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>