force-app/main/default/objects/HelloSign__HelloSign_Signature_Request_Detail__c/fields/HelloSign__Interacted_Event__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Interacted_Event__c</fullName>
    <description>Checkbox field on the signature request detail record</description>
    <formula>text(HelloSign__Event__c) != &apos;Sent&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interacted Event</label>
    <type>Checkbox</type>
</CustomField>