force-app/main/default/objects/HelloSign__HelloSign_Signature_Request_Detail__c/fields/HelloSign__Last_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Last_Reminder_Sent__c</fullName>
    <description>Datetime field on the signature request detail record. Stores the datetime of the last reminder.</description>
    <label>Last Reminder Sent</label>
    <type>DateTime</type>
</CustomField>