force-app/main/default/objects/HelloSign__HelloSign_Signature_Request_Detail__c/fields/HelloSign__Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Recipient_Email__c</fullName>
    <description>String field on the signature request detail record. Stores the email address of the recipient</description>
    <label>Recipient Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>