force-app/main/default/objects/HelloSign__HelloSign_Signature_Request_Detail__c/fields/HelloSign__Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Recipient_Name__c</fullName>
    <description>String field on the signature request detail record. Stores the name of the recipient</description>
    <label>Recipient Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>